Implement database to cloud
