# src/handler/MovieService_create.ts
@@ -2,16 +2,20 @@ import type { Request, Response } from "express";
 import { v4 as uuid } from "uuid";
 import { movies } from "../store/movieStore.ts";
 import type { Context } from "openapi-backend";
+import sql from "../config/database.ts";
 
-export function MovieService_create(
+export async function MovieService_create(
   c: Context,
   _req: Request,
   res: Response,
-): void {
-  const body = c.request.requestBody;
+): Promise<void> {
+  const { title, director, releaseYear, genre, rating } = c.request.requestBody;
 
-  const movie = { id: uuid(), ...body };
-  movies.push(movie);
+  const result = await sql`
+    INSERT INTO movies (id, title, director, release_year, genre, rating)
+    VALUES (gen_random_uuid(), ${title}, ${director}, ${releaseYear}, ${genre}, ${rating})
+    RETURNING *
+  `;
 
-  res.status(201).json(movie);
+  res.status(201).json(result);
 }
